--- a/assets/bundle.theme.css
+++ b/assets/bundle.theme.css
@@ -536,16 +536,13 @@ Use 'color('token') to access the defined color
 .cart-item__link {
   width: 123px;
 }
-.cart-item__image-wrapper {
-  height: 163px !important;
-}
 .cart-item__pay-info {
   align-self: center;
 }
 
 .sidebar-cart__footer .upsell_product_footer .cart-product__card .product-card__inner {
-  width: 49px;
-  height: 66px;
+  width: 25%;
+  height: 25%;
 }
 
 .sidebar-cart__footer .upsell_product_footer .cart-product__card {
