--- a/src/styles/global/_sidebar.scss
+++ b/src/styles/global/_sidebar.scss
@@ -67,19 +67,14 @@
         width: 123px;
     }
 
-    &__image-wrapper {
-        height: 163px !important;
-    }
-
     &__pay-info {
       align-self: center;
     }
 }
 
 .sidebar-cart__footer .upsell_product_footer .cart-product__card .product-card__inner {
-   width: 49px;
-   height: 66px;
-
+   width: 25%;
+   height: 25%;
 }
 
 .sidebar-cart__footer .upsell_product_footer .cart-product__card {
